@@ -38,8 +38,7 @@ def get_config_entry_choices(key, subkey, ignore_axes=[]):
         elif subkey == "isoelastics":
             choices = ["not shown", "analytical", "numerical", "legacy"]
         elif subkey == "contour level mode":
-            choices = ["fraction"]
-            #choices = ["fraction", "quantile"]
+            choices = ["fraction", "quantile"]
     elif key == "analysis":
         if subkey == "regression model":
             choices = ["lmm", "glmm"]
