@@ -1,4 +1,5 @@
 0.9.2
+ - Allow to set contour levels at quantiles instead of KDE fractions (#180)
  - Allow to manually select contour levels
  - Pin numpy version to <=1.13.0 to prevent ValueError caused
    by chaco testing whether an array object is contained in another
